# tablr

./: Cargo.toml  README.md  build.rs
.github/workflows/: cicd.yml
src/: main.rs
