[package]
name = "tablr"
version = "0.1.0"
edition = "2024"
description = "Desktop GUI Parquet Viewer"

[dependencies]
eframe = { version = "0.33.0", features = ["default"] }
egui_extras = "0.33.0"
polars = { version = "0.51.0", features = ["lazy", "parquet", "dtype-full", "strings", "regex"] }
rfd = "0.15.4"
